--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^3.5.2",
     "axios": "^0.18.0",
     "element-ui": "^2.0.0",
+    "nodemailer": "^6.4.10",
     "normalize.css": "^7.0.0",
     "storejs": "^1.0.16",
     "vue": "^2.5.2",
@@ -67,7 +68,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.14.1",
     "nyc": "^14.1.1",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
