--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tweenjs/tween.js": "^17.2.0",
     "animate.css": "^3.5.2",
     "axios": "^0.18.0",
+    "element-theme-chalk": "^2.13.2",
     "element-ui": "^2.0.0",
     "nodemailer": "^6.4.10",
     "normalize.css": "^7.0.0",
