--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-ui": "^2.0.0",
     "nodemailer": "^6.4.10",
     "normalize.css": "^7.0.0",
+    "plupload": "^2.3.6",
     "storejs": "^1.0.16",
     "vue": "^2.5.2",
     "vue-echarts": "^2.5.1",
